# worstenbrood

./: .copier-answers.dough.yml  .copier-answers.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
dev/: check_commit_msg.py  update_changelog.py
dev/dark/: badge.py  rebuild.sh
developer/: index.html
docs/: developer.md  index.md
search/: search_index.json
src/worstenbrood/: __about__.py  __init__.py  _constants.py
src/worstenbrood/outputs/: __init__.py  abinit.py  demo.py
src/worstenbrood/outputs/parsers/: __init__.py  abinit_stdout.py  gsr.py  json_parser.py
tests/: conftest.py
tests/outputs/: test_abinit_output.py  test_demo_output.py
tests/outputs/fixtures/abinit/: _make_fixtures.py
tests/outputs/fixtures/abinit/basic/: run.abo  run.abo_GSR.nc
tests/outputs/fixtures/abinit/magnetic/: run.abo  run.abo_GSR.nc
tests/outputs/fixtures/demo/: result.json
tests/outputs/parsers/: test_json_parser.py
tests/outputs/test_abinit_output/: test_from_dir_basic_.yml  test_from_dir_magnetic_.yml
tests/outputs/test_demo_output/: test_from_dir.yml
