[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worstenbrood"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = []
authors = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dough[pint]>=0.4,<0.5",
    "netCDF4>=1.6",
]
[project.optional-dependencies]
docs = [
"mkdocs",
  "mkdocs-material"
]
tests = [
  "pytest",
  "pytest-cov",
  "pytest-regressions>=2.10.0",
]
pre-commit = [
  "pre-commit",
  "mypy"
]

[dependency-groups]
dev = [
  "worstenbrood[docs,tests,pre-commit]",
]

[tool.hatch.version]
path = "src/worstenbrood/__about__.py"

[tool.hatch.envs.default]
installer = 'uv'
scripts.bump = [
  "hatch version {args}",
  "python dev/update_changelog.py",
]

[tool.hatch.envs.docs]
features = ["docs"]
scripts.build = "mkdocs build --clean --strict"
scripts.serve = "mkdocs serve --dev-addr localhost:8000"
scripts.deploy = "mkdocs gh-deploy --force"

[tool.hatch.envs.pre-commit]
features = ["pre-commit"]
scripts.install = "pre-commit install"
scripts.run = "pre-commit run {args}"

[tool.hatch.envs.hatch-test]
features = ["tests"]
randomize = false
parallel = false

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.coverage.run]
source = ["worstenbrood"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.ruff]
lint.ignore = [
    "TRY003",  # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "EM101",   # https://docs.astral.sh/ruff/rules/raw-string-in-exception/
    "EM102",   # https://docs.astral.sh/ruff/rules/f-string-in-exception/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "FBT002",  # https://docs.astral.sh/ruff/rules/boolean-default-value-positional-argument/
    "TID252",  # https://docs.astral.sh/ruff/rules/relative-imports/
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["INP001", "S101"]
"dev/**/*.py" = ["INP001", "T201"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true

[[tool.mypy.overrides]]
module = ["glom"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["netCDF4"]
ignore_missing_imports = true
